# cedar

./: .gitignore  API.md  CEDAR_Pitch.pptx  CONCEPT_AND_ARCHITECTURE.md  LICENSE  Makefile  README.md  TEAM_BRIEF.md  api.py  cedar.py  cedar_service.py  index.html  pyproject.toml  server.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.ts
client/src/api/: cedar.ts
client/src/assets/: main.css
client/src/components/: ApiKeyModal.vue  AppSidebar.vue  BriefView.vue  ChatView.vue  DataPanel.vue  (+2 more)
data/: cache_worldbank.json  ccri.json  gdacs_snapshot.json
output/: blindspots_KEN.md  brief_IND_drilldown_wealth.md  brief_KEN_child-survival.md  brief_KEN_economy-poverty.md  brief_KEN_education.md  brief_KEN_energy-climate.md  brief_KEN_health-system.md  brief_KEN_polycrisis.md  brief_KEN_wash.md  brief_NGA_drilldown_wealth.md  ledger_KEN_child-survival.csv  ledger_KEN_economy-poverty.csv  ledger_KEN_education.csv  ledger_KEN_energy-climate.csv  ledger_KEN_health-system.csv  ledger_KEN_wash.csv  provenance_IND_drilldown_wealth.json  provenance_KEN_child-survival.json  provenance_KEN_economy-poverty.json  provenance_KEN_education.json  provenance_KEN_energy-climate.json  provenance_KEN_health-system.json  provenance_KEN_polycrisis.json  provenance_KEN_wash.json  provenance_NGA_drilldown_wealth.json
scripts/: capture_demo_snapshots.py  fetch_ccri_bundle.py
src/childsight/: __init__.py  clients.py  server.py
tests/: test_fusion.py
tests/fixtures/: ccri_ken.csv  dm_ken.csv  gdacs_events.json  sdg_context_ken.json  sdg_kenya.json
(+10 files in other folders)
